fix for white space below the image ( .card-image )

--- a/bin/materialize.css
+++ b/bin/materialize.css
@@ -5574,7 +5574,8 @@ small {
       right: 0;
       top: 0;
       bottom: 0;
-      width: 100%; }
+      width: 100%;
+      display: block; }
     .card .card-image .card-title {
       position: absolute;
       bottom: 0;
