--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -93,6 +93,7 @@
       top: 0;
       bottom: 0;
       width: 100%;
+      display: block;
     }
 
     .card-title {
